# CampusConnect-Backend

./: .gitignore  manage.py  pyproject.toml  requirements.txt  vercel.json
attendance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
attendance/migrations/: 0001_initial.py
authentication/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
cc_backend/: asgi.py  settings.py  urls.py  wsgi.py
core/: exception_handler.py  notification_helper.py  permissions.py  response.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/fixtures/: syllabus_computer.json
courses/migrations/: 0001_initial.py
grades/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
grades/migrations/: 0001_initial.py
instructor_profile/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
instructor_profile/migrations/: 0001_initial.py
notification/: models.py  serializers.py  urls.py  views.py
notification/migrations/: 0001_initial.py
pu_result/: apps.py  models.py  serializers.py  urls.py  views.py
pu_result/management/commands/: seed_result.py
pu_result/migrations/: 0001_initial.py
student_profile/: admin.py  apps.py  models.py  serializers.py  urls.py
student_profile/management/commands/: train_face_recognition.py
student_profile/migrations/: 0001_initial.py  0002_studentprofile_face_encoding.py
student_profile/views/: student_profile.py
